--- a/app/views/professional_profiles/_form.html.erb
+++ b/app/views/professional_profiles/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.number_field :business_hours %>
     <br><br>
     <%= f.file_field :barber_shop_images, multiple: true %><br /><br />
+    <%= link_to "X",user_professional_profile_path(@professional_profile), method: :delete, data: { confirm: "Tem certeza?" } %>
     <%= f.file_field :haircut_images, multiple: true %><br /><br />
     <%= f.submit 'Upload' %>
 <% end %>
