Instalação do bulma

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Home#index</h1>
+<h1 class= "title has-text-primary">Home#index</h1>
 <% unless current_user %>
   <%= link_to "Cadastrar", new_user_registration_path %>
   <br>
