--- a/app/views/agendas/_form.html.erb
+++ b/app/views/agendas/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: @agenda, url: url) do |form| %>
-  <% if @agenda.errors.any? %>
+<%= form_with(model: agenda, url: url) do |form| %>
+  <% if agenda.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@agenda.errors.count, "error") %> prohibited this agenda from being saved:</h2>
+      <h2><%= pluralize(agenda.errors.count, "error") %> prohibited this agenda from being saved:</h2>
       <ul>
-        <% @agenda.errors.each do |error| %>
+        <% agenda.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
