[AC-2]: Adicionando Pundit para politica e controle de acesso

--- a/app/views/professional_profiles/index.html.erb
+++ b/app/views/professional_profiles/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <% if current_user %>
-  <%= link_to "editar perfil", edit_user_professional_profile_path(current_user) %>
+  <%# <%= link_to "editar perfil", edit_user_professional_profile_path(current_user) %> %>
   <br>
   <%= link_to "mostrar perfil", user_professional_profile_path(current_user) %>
   <br>
