--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,5 +8,10 @@
 <% if current_user %>
   <%= link_to "Meus endereços", user_addresses_path(current_user) %>
   <br>
+  <%= link_to "exibir perfil", user_professional_profile_path(current_user,current_user.professional_profile) %>
+  <br>
   <%= link_to "Sair", destroy_user_session_path, method: :delete %>
 <% end %>
+
+
+
