--- a/app/views/professional_profiles/show.html.erb
+++ b/app/views/professional_profiles/show.html.erb
@@ -4,7 +4,7 @@
 <% if current_user %>
   <%= link_to "editar perfil", edit_user_professional_profile_path(current_user) %>
   <br>
-  <%= link_to "mostrar perfil", user_professional_profile_path(current_user) %>
+  <%= render "/agendas/modal_agenda" %>
   <br>
   <%= link_to "Sair", destroy_user_session_path, method: :delete %>
 <% end %>
