Alteração no JS do modal

--- a/app/views/agendas/_modal_agenda.html.erb
+++ b/app/views/agendas/_modal_agenda.html.erb
@@ -16,7 +16,7 @@
 </button>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
+$(document).on('turbolinks:load', function() {
   // Functions to open and close a modal
   function openModal($el) {
     $el.classList.add('is-active');
