--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,31 @@
  *= require_tree .
  *= require_self
  */
+@import "font-awesome";
+
+ body, html{
+  height: 100%;
+  padding-bottom: 0px;
+  padding-top: 0px;
+}
+
+.section {
+  height: 100%;
+}
+
+ #columns-body {
+  height: 100%;
+  #column-body {
+    height: 100%;
+    #menu-body {
+      height: 100%;
+    }
+  }
+ }
+
+ .control-paginator, .commentary-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
