--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render "layouts/navbar" %>
     <section class="section px-0 py-0">
-      <div class="columns" id="columns-body">
+      <div class="columns is-variable" id="columns-body">
         <div class="column" id="column-body">
           <section class="section py-5">
             <div class="columns">
