--- a/app/views/professional_profiles/edit.html.erb
+++ b/app/views/professional_profiles/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render 'form', professional_profile: @professional_profile %>
+<div class="main center justify-content">
+    <%= render 'form', professional_profile: @professional_profile %>
+<div>
