--- a/app/views/professional_profiles/_form.html.erb
+++ b/app/views/professional_profiles/_form.html.erb
@@ -1,5 +1,3 @@
-
- 
 <%= form_with model: professional_profile, url: user_professional_profile_path(@professional_profile), local: true do |form| %>
   <div class="column is-offset-12 is-12">
     <div class="box">
@@ -51,7 +49,7 @@
 
       <div class="field is-grouped is-grouped-right">
         <div class="control">
-          <%= form.submit "Concluído", class: "button is-info" %>
+          <%= form.submit "Concluído", class: "button is-dark" %>
         </div>
         <div class="control">
           <%= link_to "Cancelar", root_path, class: "button is-warning" %>
