--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,7 +10,7 @@ body, button, input, select, textarea {
     text-transform: uppercase;
     font-size: 1.8rem;
     letter-spacing: 2px;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 
 .has-text-centered {
@@ -148,4 +148,11 @@ div {
 
 .main-content .section-color.services .title, .main-content .section-color.services .subtitle {
     color: white;
+}
+
+/* card haircut images */
+figure.image.is-2by1.work-item {
+    max-width: 100%;
+    height: 171px;
+    object-fit: cover;
 }
