Adicionado o campo price

--- a/app/views/agendas/_modal_agenda.html.erb
+++ b/app/views/agendas/_modal_agenda.html.erb
@@ -12,7 +12,7 @@
 </div>
 
 <button class="js-modal-trigger button is-primary" data-target="modal-js-example">
-  Criar Nova Agenda
+  <%= icon("fas", "calendar") %>
 </button>
 
 <script>
