--- a/app/views/professional_profiles/show.html.erb
+++ b/app/views/professional_profiles/show.html.erb
@@ -1,113 +1,60 @@
 
 
-<div class="main-content">
-  <div class="section-light column is-offset-4 is-9" id="">
-    <div class="container">
-      <div class="column  about-me">
-        <div class="column is-6 right-image aos-init aos-animate" data-aos="fade-left">
-          <img class="is-rounded" src="<%= @professional_profile.logo%>" alt="">
-          <%= image_tag @professional_profile.logo, class:"is-rounded"  %>
-          <h1 class="title has-text-centered section-title">About Me</h1>
-          <% if current_user %>
-            <% if policy(@professional_profile).edit? %>
-              <div class="column has-text-centered ">
-                <%= link_to "editar perfil", edit_user_professional_profile_path(current_user), class: "button is-dark" %>
-                <%= render "/agendas/modal_agenda" %>
-              </div>
-            <% end %>
-          <% end %>
-          <h3 class="subtitle"><%= @professional_profile.description %></h3>
+  <div class="column is-offset-2 is-8" id="">
+    <% if current_user && policy(@professional_profile).edit? %>
+      <%= render "level_menu" %>
+    <% end %>
+    
+    <div class="has-text-centered">
+      <div class="right-image aos-init aos-animate" data-aos="fade-left">
+        <p><%= image_tag @professional_profile.logo, class:"is-rounded", size: "350x350" %></p>
+        <h1 class="title has-text-centered section-title">Barber Shop</h1>
+      </div>
+    </div>
+    <h3 class="subtitle"><%= @professional_profile.description %></h3>
+
+    <div class="section-dark my-work" id="my-work">
+      <div class="container">
+        <div class="columns is-multiline aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
+          <div class="column is-12">
+            <h1 class="title has-text-centered section-title">Conheça Nosso Estabelecimento</h1>
+          </div>
+          <% @professional_profile.barber_shop_images.each do |image| %>
+
+            <div class="column is-3">
+              <a href="#">
+                <figure class="image is-2by1 work-item">
+                  <%= image_tag image %>
+                </figure>
+              </a>
+            </div>
+          
+          <% end%>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-dark my-work" id="my-work">
+      <div class="container">
+        <div class="columns is-multiline aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
+          <div class="column is-12">
+            <h1 class="title has-text-centered section-title">Galeria de Cortes</h1>
+          </div>
+          <% @professional_profile.haircut_images.each do |image| %>
+
+            <div class="column is-3">
+              <a href="#">
+                <figure class="image is-2by1 work-item">
+                  <%= image_tag image %>
+                </figure>
+              </a>
+            </div>
+          
+          <% end%>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="section-color services" id="services">
-    <div class="container">
-      <div class="columns is-multiline">
-        <div class="column is-12 about-me aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
-          <h1 class="title has-text-centered section-title">Serviços</h1>
-
-          <h2 class="subtitle">
-            Na Barber Shop  você encontra os melhores serviços relacionados a corte e variados, a melhor do mercado, tanto no preço, como no atendimento, aqui são alguns serviços oferecidos:
-          </h2>
-          <br>
-        </div>
-        <div class="columns is-12">
-          <div class="column is-4 has-text-centered aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
-            <svg class="svg-inline--fa fa-meteor fa-w-16 fa-3x" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="meteor" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M491.12794.70921c-38.6972,11.5936-111.77976,34.29644-187.67439,61.2961-2.09343-6.99991-3.99939-13.49983-5.5929-18.59351a16.058,16.058,0,0,0-22.90274-9.49988c-42.39976,22.09347-152.77349,82.59271-214.37343,142.4982-1.09359,1-2.49962,2-3.49947,3A194.83045,194.83045,0,1,0,332.6522,454.90662c.99985-1,1.9997-2.40622,2.99954-3.49995,59.78772-61.6086,120.3722-172.10721,142.47819-214.40356a16.06158,16.06158,0,0,0-9.49854-22.906c-5.20233-1.59373-11.6076-3.5-18.60653-5.59368,26.99587-75.999,49.69552-148.99813,61.30311-187.70077A16.18325,16.18325,0,0,0,491.12794.70921ZM191.97061,448.00046A127.99839,127.99839,0,1,1,319.951,320.00207,127.97573,127.97573,0,0,1,191.97061,448.00046Z"></path><path class="fa-primary" fill="currentColor" d="M191.97061,192.00368A127.99839,127.99839,0,1,0,319.951,320.00207,127.97573,127.97573,0,0,0,191.97061,192.00368Zm-31.9951,127.99839a31.9996,31.9996,0,1,1,31.9951-31.9996A31.959,31.959,0,0,1,159.97551,320.00207Zm47.99265,63.9992a15.9998,15.9998,0,1,1,15.99755-15.9998A16.04976,16.04976,0,0,1,207.96816,384.00127Z"></path></g></svg><!-- <i class="fad fa-meteor fa-3x"></i> Font Awesome fontawesome.com -->
-            <hr>
-            <h2>
-              Avaliação e acompanhamento capilar<br>Quer fazer um visual novo, pretende deixar crescer? A gente te ajuda.
-            </h2>
-          </div>
-          <div class="column is-4 has-text-centered aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
-            <svg class="svg-inline--fa fa-paint-brush fa-w-16 fa-3x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="paint-brush" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M167.02 309.34c-40.12 2.58-76.53 17.86-97.19 72.3-2.35 6.21-8 9.98-14.59 9.98-11.11 0-45.46-27.67-55.25-34.35C0 439.62 37.93 512 128 512c75.86 0 128-43.77 128-120.19 0-3.11-.65-6.08-.97-9.13l-88.01-73.34zM457.89 0c-15.16 0-29.37 6.71-40.21 16.45C213.27 199.05 192 203.34 192 257.09c0 13.7 3.25 26.76 8.73 38.7l63.82 53.18c7.21 1.8 14.64 3.03 22.39 3.03 62.11 0 98.11-45.47 211.16-256.46 7.38-14.35 13.9-29.85 13.9-45.99C512 20.64 486 0 457.89 0z"></path></svg><!-- <i class="fas fa-paint-brush fa-3x"></i> Font Awesome fontawesome.com -->
-            <hr>
-            <h2>
-              Pintura e tratamento capilar, utilizando os melhores produtos sem agredir o cabelo.
-            </h2>
-          </div>
-          <div class="column is-4 has-text-centered aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
-            <svg class="svg-inline--fa fa-rocket fa-w-16 fa-3x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="rocket" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M505.12019,19.09375c-1.18945-5.53125-6.65819-11-12.207-12.1875C460.716,0,435.507,0,410.40747,0,307.17523,0,245.26909,55.20312,199.05238,128H94.83772c-16.34763.01562-35.55658,11.875-42.88664,26.48438L2.51562,253.29688A28.4,28.4,0,0,0,0,264a24.00867,24.00867,0,0,0,24.00582,24H127.81618l-22.47457,22.46875c-11.36521,11.36133-12.99607,32.25781,0,45.25L156.24582,406.625c11.15623,11.1875,32.15619,13.15625,45.27726,0l22.47457-22.46875V488a24.00867,24.00867,0,0,0,24.00581,24,28.55934,28.55934,0,0,0,10.707-2.51562l98.72834-49.39063c14.62888-7.29687,26.50776-26.5,26.50776-42.85937V312.79688c72.59753-46.3125,128.03493-108.40626,128.03493-211.09376C512.07526,76.5,512.07526,51.29688,505.12019,19.09375ZM384.04033,168A40,40,0,1,1,424.05,128,40.02322,40.02322,0,0,1,384.04033,168Z"></path></svg><!-- <i class="fas fa-rocket fa-3x"></i> Font Awesome fontawesome.com -->
-            <hr>
-            <h2>
-              Venda de produtos Capilares , desde Minoxidil, cremes capilares, tunicos para barba e outros.
-            </h2>
-          </div>
-        </div>
-        <hr>
-        <div class="columns is-12">
-          <div class="column is-4 has-text-centered aos-init" data-aos="fade-in" data-aos-easing="linear">
-            <svg class="svg-inline--fa fa-upload fa-w-16 fa-3x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="upload" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg><!-- <i class="fas fa-upload fa-3x"></i> Font Awesome fontawesome.com -->
-            <hr>
-            <h2>
-              Acesse nossa loja online, onde você pode comprar produtos capilares e ver os cortes oferecidos.
-            </h2>
-          </div>
-          <div class="column is-4 has-text-centered aos-init" data-aos="fade-in" data-aos-easing="linear">
-            <svg class="svg-inline--fa fa-bus fa-w-16 fa-3x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bus" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M488 128h-8V80c0-44.8-99.2-80-224-80S32 35.2 32 80v48h-8c-13.25 0-24 10.74-24 24v80c0 13.25 10.75 24 24 24h8v160c0 17.67 14.33 32 32 32v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h192v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h6.4c16 0 25.6-12.8 25.6-25.6V256h8c13.25 0 24-10.75 24-24v-80c0-13.26-10.75-24-24-24zM112 400c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm16-112c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32v128c0 17.67-14.33 32-32 32H128zm272 112c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"></path></svg><!-- <i class="fas fa-bus fa-3x"></i> Font Awesome fontawesome.com -->
-            <hr>
-            <h2>
-              Atendimento ao cliente, 8 horas por dia, 7 dias por semana, fazendo sua reserva antes de ir ao estabelecimento.
-            </h2>
-          </div>
-          <div class="column is-4 has-text-centered aos-init" data-aos="fade-in" data-aos-easing="linear">
-            <svg class="svg-inline--fa fa-code fa-w-20 fa-3x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="code" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" data-fa-i2svg=""><path fill="currentColor" d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"></path></svg><!-- <i class="fas fa-code fa-3x"></i> Font Awesome fontawesome.com -->
-            <hr>
-            <h2>
-              Aplicação web ao clientes para verem nossos serviços e poderem ter o melhor atendimento possivel.
-            </h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="section-dark my-work" id="my-work">
-    <div class="container">
-      <div class="columns is-multiline aos-init aos-animate" data-aos="fade-in" data-aos-easing="linear">
-        <div class="column is-12">
-          <h1 class="title has-text-centered section-title">Galeria de Cortes</h1>
-        </div>
-        <% @professional_profile.haircut_images.each do |image| %>
-
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 work-item">
-                 <%= image_tag image %>
-              </figure>
-            </a>
-          </div>
-         
-        <% end%>
-      </div>
-    </div>
-  </div>
-
- 
-
-</div>
 
 
 
