--- a/app/views/professional_profiles/_level_menu.html.erb
+++ b/app/views/professional_profiles/_level_menu.html.erb
@@ -9,7 +9,7 @@
     <div class="level-item has-text-centered">
       <div>
         <p class="heading">Preço</p>
-        <%# <p class="title">R$<%= @professional_profile. %>
+        <p class="title">R$<%= @professional_profile.price%></p>
       </div>
     </div>
     <div class="level-item has-text-centered">
