--- a/app/views/haircut_schedules/edit.html.erb
+++ b/app/views/haircut_schedules/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>HAIRCUT SCHEDULE #EDIT</h1>
-
-<%= render "form", url: professional_profile_agenda_haircut_schedule_path %>
+<div class="column is-8 is-offset-2">
+  <h1 class="title">Editar agendamento em <%= ProfessionalProfile.find(params[:professional_profile_id]).user.name %></h1>
+  <hr>
+  <%= render "form", url: professional_profile_agenda_haircut_schedule_path, barber_shop: ProfessionalProfile.find(params[:professional_profile_id]) %>
+</div>
