--- a/app/views/rates/_rate.html.erb
+++ b/app/views/rates/_rate.html.erb
@@ -2,16 +2,19 @@
 	<div class="field">
 		<div class="image-coment px-5">
 			<span class="icon">
-				<%= icon("fas", "star")*rate.rate %>
+				<%= icon("fas", "star", class: "has-text-warning")*rate.rate %>
 			</span>
 		</div>
-		<br>
 		<div class="text-coment">
-			<p>
-				<%= rate.comment %>
-			</p>
+			<div class="text-field">
+				<div class="text-author">
+					<p>@<%= rate.user.name %></p>
+				</div>  
+			</div>
+				<p><%= rate.comment %></p>
+        <div class="text-date">
+          <p class="has-text-right subtitle is-size-7"><%= rate.created_at.to_s(:rate) %></p>
+        </div>
 		</div>
 	</div>
-
-
 </div>
