Agendas adicionadas no perfil profissional. Visualização de agendas e agenda feitas. Ajustes nas views do devise

--- a/app/views/agendas/_modal_agenda.html.erb
+++ b/app/views/agendas/_modal_agenda.html.erb
@@ -3,7 +3,7 @@
 
   <div class="modal-content">
     <div class="box">
-      <p>Escolha o horário</p>
+      <p>Escolha o horário que o estabelecimento abrirá</p>
       <%= render '/agendas/form', agenda: @agenda, url: user_professional_profile_agendas_path(professional_profile_id: current_user.professional_profile.id) %>
     </div>
   </div>
