--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -59,7 +59,7 @@
               <button class="button is-dark">Submit</button>
             </div>
             <div class="control">   
-              <button class="button is-warning">Login</button>
+              <%= link_to "Login", new_user_session_path, class: "button is-warning" %>
             </div>
           </div>
         <%end%>
