--- a/app/views/professional_profiles/edit.html.erb
+++ b/app/views/professional_profiles/edit.html.erb
@@ -1,3 +1,5 @@
-<div class="main center justify-content">
-    <%= render 'form', professional_profile: @professional_profile %>
-<div>
+<div class="column is-4 is-offset-4">
+  <h1 class="title is-4">Editar Perfil Profissional</h1>
+  <hr>
+  <%= render 'form', professional_profile: @professional_profile %>
+</div>
