--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -149,9 +149,9 @@ div {
 }
 
 /* card haircut images */
-figure.image.is-2by1.work-item {
+img.image-size {
     max-width: 100%;
-    height: 171px;
+    height: 250px;
     object-fit: cover;
 }
 .columns.is-multiline.aos-init.aos-animate {
