--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+@import "../../../node_modules/bulma/bulma.sass";
 @import "font-awesome";
 
  body, html{
