Atualização dos metodos de pagamentos da barbearia (padrão)

--- a/app/views/professional_profiles/show.html.erb
+++ b/app/views/professional_profiles/show.html.erb
@@ -52,6 +52,13 @@
   </div>
 
   <div class="title has-text-centered pt-6 ">
+    <h1 class="title">Métodos de Pagamento</h1>
+    <hr>
+    <figure class="image is-436-63">
+      <img src="https://moip.com.br/wp-content/uploads/2020/07/wirecard-selos-grande-horizontal.png">
+    </figure>
+  </div>
+  <div class="title has-text-centered pt-6 ">
     <h1 class="title">Deixe aqui seu Feedback</h1>
     <hr>
   </div>
