--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,9 @@
  */
 @import "../../../node_modules/bulma/bulma.sass";
 @import "font-awesome";
+@import "bulma-quickview/dist/css/bulma-quickview";
+@import "./chats";
+@import "./messages";
 
  body, html{
   height: 100%;
@@ -41,4 +44,58 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.navbar-burger.burger.desktop-burger {
+  display: block
+}
+
+.sidebar-menu {
+  li {
+    padding: 0.7em;
+
+    a {
+      &:link, &:hover, &:visited, &:active {
+        text-decoration: none;
+        color: $white-ter;
+      }
+    }
+  }
+}
+
+div.columns.item-list {
+  border-bottom: 1px dashed $white-ter;
+
+  a {
+    &:link, &:hover, &:visited, &:active {
+      text-decoration: none;
+      color: $white-ter;
+    }
+  }
+
+  i.fas {
+    font-size: 50px
+  }
+
+  figure {
+    margin: auto;
+    width: 50px;
+    height: 50px;
+
+    img {
+      margin: auto;
+      height: inherit;
+      width: inherit;
+    }
+  }
+}
+
+.button.fab-button {
+  position: fixed;
+  z-index: 999;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  bottom: 30px;
+  right: 30px;
 }
